// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceRename Dialog administrator Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceRename Dialog observer Renders the component 1`] = `
<fragment-stub><span><button disabled="disabled" type="button" class="v-icon notranslate v-icon--disabled v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceRename Dialog operator Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceRename Dialog owner Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceRename Icon administrator Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceRename Icon observer Renders the component 1`] = `
<fragment-stub><span><button disabled="disabled" type="button" class="v-icon notranslate v-icon--disabled v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceRename Icon operator Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceRename Icon owner Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-pencil theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
